Feat: Beach 관련 API 구현 (#34)
* feat: 해변 상세조회 api 구현

* refactor: repository 대신 service 의존

* refactor: dto 이름에서 one 제거

* refactor: read는 repository 의존으로 수정

* refactor: MemberFindResponse 중첩 구조 삭제

* refactor: RecordDto 내부로 이동

* refactor: dto 네이밍 변경

* feat: AuthMapper 생성 및 로직이동

* feat: 해변 위치 전체 조회 API 구현

* fix: AuthMapper Component 등록

* refactor: 패키지 구조 변경

* fix: 패키지 구조 변경에 의한 import 오류

* feat: 해변 근처 인증하기 API 구현

* refactor: 예약어 range 삭제

* fix: form-data request dto 매핑 에러 수정

* chore: validation 의존성 재설치

* refactor: rayCasting 알고리즘 단순하게 수정

* fix: dto 직렬화 에러 해결

* refactor: BeachMapper 삭제

* refactor: recordMapper 삭제

* feat: 액세스 토큰 기간 연장

* refactor: responseEntity 컨벤션에 맞게 수정