@@ -1,14 +1,15 @@
 package beachcombing.backend.domain.record.service;
 
 import beachcombing.backend.domain.beach.domain.Beach;
-import beachcombing.backend.domain.record.dto.RecordByBeachFindAllResponse;
-import beachcombing.backend.domain.beach.repository.BeachRepository;
+import beachcombing.backend.domain.record.controller.dto.RecordByBeachFindAllResponse;
+import beachcombing.backend.domain.beach.domain.repository.BeachRepository;
 import beachcombing.backend.domain.member.domain.Member;
-import beachcombing.backend.domain.member.repository.MemberRepository;
+import beachcombing.backend.domain.member.domain.repository.MemberRepository;
+import beachcombing.backend.domain.record.controller.dto.RecordFindAllResponse;
+import beachcombing.backend.domain.record.controller.dto.RecordSaveRequest;
+import beachcombing.backend.domain.record.controller.dto.RecordSaveResponse;
 import beachcombing.backend.domain.record.domain.Record;
-import beachcombing.backend.domain.record.dto.*;
-import beachcombing.backend.domain.record.mapper.RecordMapper;
-import beachcombing.backend.domain.record.repository.RecordRepository;
+import beachcombing.backend.domain.record.domain.repository.RecordRepository;
 import beachcombing.backend.global.config.exception.CustomException;
 import beachcombing.backend.global.config.exception.ErrorCode;
 import lombok.RequiredArgsConstructor;
@@ -17,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,7 +29,7 @@ public class RecordService {
     //private final ImageService imageService;
     private final MemberRepository memberRepository;
     private final BeachRepository beachRepository;
-    private final RecordMapper recordMapper;
+
 
     // 청소 기록하기
     public RecordSaveResponse saveRecord(Long memberId, RecordSaveRequest request){
@@ -42,11 +42,11 @@ public class RecordService {
         String beforeUuid = "beforeImage";
         String afterUuid = "afterImage";
 
-        Record record = Record.createRecord(request.duration, request.distance, beforeUuid, afterUuid, member, beach);
+        Record record = Record.createRecord(request.duration,request.distance, beforeUuid, afterUuid, member, beach);
 
         recordRepository.save(record);
 
-        return recordMapper.toRecordIdResponse(record);
+        return RecordSaveResponse.from(record);
     }
 
     // 자신의 청소기록 목록 조회
@@ -61,9 +61,9 @@ public class RecordService {
                     //String afterImageUrl = imageService.processImage(record.getAfterImage());
                     String beforeImageUrl = "beforeImageUrl";
                     String afterImageUrl = "afterImageUrl";
-                    return recordMapper.toRecordFindAllResponse(record, beforeImageUrl, afterImageUrl, isWritten);
+                    return RecordFindAllResponse.of(record, beforeImageUrl, afterImageUrl, isWritten);
                 })
-                .collect(Collectors.toList());
+                .toList();
         return response;
     }
 
@@ -73,20 +73,19 @@ public class RecordService {
         Member member = getMember(memberId);
         Beach beach = getBeach(beachId);
 
-        List<RecordDto> recordDtoList = recordRepository.findByMemberAndBeachOrderByCreatedDateDesc(member, beach).stream()
+        List<RecordByBeachFindAllResponse.RecordDto> recordDtoList = recordRepository.findByMemberAndBeachOrderByCreatedDateDesc(member, beach).stream()
                 .map(record -> {
                             //String beforeImageUrl = imageService.processImage(record.getBeforeImage());
                             //String afterImageUrl = imageService.processImage(record.getAfterImage());
                             String beforeImageUrl = "";
                             String afterImageUrl = "";
-                            return recordMapper.toRecordDto(record, beforeImageUrl, afterImageUrl);
+                            return RecordByBeachFindAllResponse.RecordDto.from(record, beforeImageUrl, afterImageUrl);
                         }
                 )
                 .toList();
 
-        return recordMapper.toRecordByBeachFindAllResponse(beach, recordDtoList);
+        return RecordByBeachFindAllResponse.of(beach, recordDtoList);
     }
-
 
     // 예외 처리 - 존재하는 member 인가
     private Member getMember(Long memberId) {
@@ -99,5 +98,6 @@ public class RecordService {
         return beachRepository.findById(beachId)
                 .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_BEACH));
     }
+
 
 }
